[package]
name = "todo-app-service-api"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.20", features = ["derive"] }

auth-service-api = {version = "*", git = "https://github.com/innexgo/auth-service-api" }
