[package]
name = "todo-app-service-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
auth-service-api = {version = "*", git = "https://github.com/innexgo/auth-service-api" }
derive_more = "0.99.17"
